# Real_Time_EEG

./: .gitignore  .~lock.EEG_corrected.csv#  Betas.csv  CMakeLists.txt  CMakeLists.txt.user.40bb690  CMakeLists.txt.user.7e9e492  CMakeLists.txt.user.d7f6796  EEG_corrected.csv  LICENCE.md  README.md  circularEigenBuffer.cpp  circularEigenBuffer.h  cmake_run.sh  dataHandler.cpp  dataHandler.h  datastream  main.cpp  proj_cmake_run.sh  run.sh
EEG/phaseEstimation/: phaseEstimationFunctions.cpp  phaseEstimationFunctions.h
EEG/preprocessing/: GACorrection.cpp  GACorrection.h  preprocessingFunctions.cpp  preprocessingFunctions.h  removeBCG.cpp  removeBCG.h
Socket_testing/: NetworkUtils.cpp  SamplePacket.cpp  SamplePacket.h  main.cpp  run_main.sh  simulate_sample_packets.cpp
UI/: EEGSpinWorker.cpp  TMSwindow.cpp  TMSwindow.h  TMSwindow.ui  eegwindow.cpp  eegwindow.h  eegwindow.ui  glwidget.cpp  glwidget.h  mainglwidget.cpp  mainglwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  phaseEstwindow.cpp  phaseEstwindow.h  phaseEstwindow.ui  processingglwidget.cpp  processingglwidget.h  processingwindow.cpp  processingwindow.h  processingwindow.ui  processingworker.cpp  processingworker.h  triggeringwindow.cpp  triggeringwindow.h  triggeringwindow.ui  worker.cpp  worker.h
UI/MRIwindow/: mriwindow.cpp  mriwindow.h  openglMRIwidget.cpp  openglMRIwidget.h
UI/TMSwindow/: TMSwindow.cpp  TMSwindow.h
UI/eegwindow/: eegwindow.cpp  eegwindow.h  glwidget.cpp  glwidget.h
UI/mainwindow/: customTitleBar.cpp  customTitleBar.h  mainglwidget.cpp  mainglwidget.h  mainwindow.cpp  mainwindow.h
UI/phaseEstimationwindow/: customTooltip.h  phaseEstwindow.cpp  phaseEstwindow.h  polarHistogramOpenGLWidget.h  processingglwidget.cpp  processingglwidget.h
UI/workers/: EEGSpinWorker.cpp  EEGSpinWorker.h  phaseEstimationWorker.cpp  phaseEstimationWorker.h  preProcessingWorker.cpp  preProcessingWorker.h
dataHandler/: GACorrection.h  circularEigenBuffer.cpp  circularEigenBuffer.h  dataHandler.cpp  dataHandler.h  magPro.cpp  magPro.h
dataProcessor/: dataProcessor.cpp  dataProcessor.h  processingFunctions.cpp  processingFunctions.h
devices/EEG/eeg_bridge/: eeg_bridge.cpp  eeg_bridge.h  measurementStartPacket.h  networkUtils.cpp  networkUtils.h  run_local_simulate_sample_packets.sh  run_simulate_sample_packets.sh  samplePacket.cpp  samplePacket.h
devices/EEG/eeg_bridge_simulation/: simulate_sample_packets.cpp
devices/TMS/magPro/: magPro.cpp  magPro.h
eeg_bridge/: eeg_bridge.cpp  eeg_bridge.h  local_simulate_sample_packets.cpp  measurementStartPacket.cpp  measurementStartPacket.h  receive_packets.cpp  run_receive_packets.sh  samplePacket.cpp  samplePacket.h  simulate_sample_packets.cpp
math/: dsp.cpp  dsp.h
utils/: utilityFunctions.cpp  utilityFunctions.h
workers/: phaseEstimationWorker.h  preProcessingWorker.cpp  preProcessingWorker.h
